2024-02-19 13:14 MainPage NavigationBar 상속

--- a/src/main/resources/templates/HangOut/Main.html
+++ b/src/main/resources/templates/HangOut/Main.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <div th:include="NavigationBar :: NavigationBar"></div> <!-- fragment 이름을 정확히 지정 -->
+<div th:replace="HangOut/NavigationBar"></div> <!-- fragment 이름을 정확히 지정 -->
 </body>
 </html>
